@@ -293,13 +293,14 @@ Dell Poweredge 2900, Dell Poweredge 2950, Dell Poweredge R610, Dell
 Poweredge R710, Fujitsu iRMC S1 and iRMC S2 systems, Intel
 S5500WB/Penguin Computing Relion 700, Intel S2600JF/Appro 512X, Intel
 S5000PAL, Inventec 5441/Dell Xanadu II, Inventec 5442/Dell Xanadu III,
-Quanta S99Q/Dell FS12-TY, Quanta QSSC-S4R/Approp GB812X-CN, Sun X4140
+Quanta S99Q/Dell FS12-TY, Quanta QSSC-S4R/Appro GB812X-CN, Sun X4140
 Supermicro X7DBR-3, Supermicro X7DB8, Supermicro X8DTN, Supermicro
 X7SBI-LN4, Supermicro X8DTH, Supermicro X8DTG, Supermicro X8DTU,
 Supermicro X8DT3-LN4F, Supermicro X8DTU-6+, Supermicro X8DTL,
 Supermicro X8DTL-3F, Supermicro X8SIL-F, Supermicro X9SCL, Supermicro
 X9SCM, Supermicro X8DTN+-F, Supermicro X8SIE, Supermicro X9SCA-F-O,
-Supermicro H8DGU-F, Supermicro X9DRi-F.
+Supermicro H8DGU-F, Supermicro X9DRi-F, Supermicro X9DRI-LN4F+,
+Supermicro X9SPU-F-O, Wistron/Dell Poweredge C6220.
 #include <@top_srcdir@/man/manpage-common-known-issues.man>
 .SH "FILES"
 @IPMISELD_CONFIG_FILE_DEFAULT@
